# Insta-SCM

./: .env.example  .gitignore  Dockerfile  README.md  data_dump.json  docker-compose.yml  manage.py  normalize_dates.py  patch_dhl.py  payload2_realout.txt  pyproject.toml  requirements.txt  resolve.py  run.py  run_dev.bat  test_fedex.py  test_fedex_payload.py  test_fedex_payload2.py  test_out.txt  test_output.txt  test_payload_out.txt  test_payload_out2.txt  test_rich_out.txt  tmp_dash.txt  vercel.json
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  error_handlers.py
app/core/: auth.py  config.py  errors.py  logging_config.py  (+1 more)
client/: .env.development  .env.production  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
docs/: shipping-audit-notes.md
resources/: Project Pilot sheet.xlsx  google_sheet_shipment_sync.gs  import_projects.py
scripts/: README_SYNC.md  db_setup.py  debug_fedex.py  diagnose.py  migrate_allocations.py  migrate_neon.py  migrate_shipments.py  migrate_sqlite_to_neon.py  reseed_neon.py  seed_design_dashboard_dataset.py  seed_projects_py_test.py  sync_to_production.py  test_tracking.py
tests/: conftest.py  test_carrier_detection.py  test_dashboard_project_flow.py  test_dhl_parser.py  test_dhl_provider.py  test_fedex_parser.py  test_resource_scheduling.py  test_shipment_endpoints.py
tmp/: check_auth.py  check_columns.py  check_db.py  fix_db.py  map.py  migrate.py  repro.py  reset_password.py  test_availability.py  test_serialization2.py  test_timeline_api.py  verify_models.py  wipe_projects.py
(+140 files in other folders)
